# lzo2

./: CMakeLists.txt
cmake/: lzo2-config.cmake
